--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="entry_password">Ingrese su contraseña</string>
     <string name="entry_password_again">Ingrese su contraseña nuevamente</string>
     <string name="welcome">Bienvenido</string>
+    <string name="aprende">Aprende</string>
+    <string name="practica">Practica</string>
+    <string name="title_advanced_path">Advanced: Like a Path</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
